# adc-less-resistance-measure

./: Cargo.toml  Embed.toml  README.md
src/: main.rs
